add category page, add swiper slider

--- a/shop/static/shop/home.css
+++ b/shop/static/shop/home.css
@@ -86,15 +86,15 @@ html {
 }
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 60px;
+  margin-bottom: 95px;
 }
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 60px;
-  line-height: 60px; /* Vertically center the text there */
+  height: 95px;
+  line-height: 1; /* Vertically center the text there */
 }
 
 .footer > .container {
