--- a/shop/templates/shop/details.html
+++ b/shop/templates/shop/details.html
@@ -60,26 +60,12 @@
                   <!-- Preloader image -->
                   <div class="swiper-lazy-preloader swiper-lazy-preloader-black"></div>
                 </div>
+                {% for image_obj in  images %}
                 <div class="swiper-slide">
-                  <img data-src="https://images.unsplash.com/photo-1485965120184-e220f721d03e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=850&q=80" class="swiper-lazy bike-img"/>
+                  <img data-src="{{image_obj.image.url}}" class="swiper-lazy bike-img"/>
                   <div class="swiper-lazy-preloader swiper-lazy-preloader-black"></div>
                 </div>
-                <div class="swiper-slide">
-                  <img data-src="https://images.unsplash.com/photo-1576435728678-68d0fbf94e91?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=850&q=80" class="swiper-lazy bike-img"/>
-                  <div class="swiper-lazy-preloader swiper-lazy-preloader-black"></div>
-                </div>
-                <div class="swiper-slide">
-                  <img data-src="https://images.unsplash.com/photo-1532298229144-0ec0c57515c7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=850&q=80" class="swiper-lazy bike-img"/>
-                  <div class="swiper-lazy-preloader swiper-lazy-preloader-black"></div>
-                </div>
-                <div class="swiper-slide">
-                  <img data-src="https://images.unsplash.com/photo-1549216963-72c1712c1196?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=850&q=80" class="swiper-lazy bike-img"/>
-                  <div class="swiper-lazy-preloader swiper-lazy-preloader-black"></div>
-                </div>
-                <div class="swiper-slide">
-                  <img data-src="https://images.unsplash.com/photo-1541584285245-c83a93cce0e8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=850&q=80" class="swiper-lazy bike-img"/>
-                  <div class="swiper-lazy-preloader swiper-lazy-preloader-black"></div>
-                </div>
+               {% endfor %}
               </div>
               <!-- Add Pagination -->
               <div class="swiper-pagination swiper-pagination-white"></div>
