--- a/shop/templates/shop/layout.html
+++ b/shop/templates/shop/layout.html
@@ -41,9 +41,21 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/contact">Contact us</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link btn btn-outline-success my-2 my-sm-0 py-1 login" href="/admin">Log in</a>
+                {% if user.is_authenticated %}
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      {{ user.username }}
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown2">
+                      <a class="dropdown-item" href="{% url 'admin:index' %}">Dashboard</a>
+                      <a class="dropdown-item" href="{% url 'admin:logout' %}">Log out</a>
+                    </div>
                 </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link btn btn-outline-success my-2 my-sm-0 py-1 login" href="{% url 'admin:login' %}">Log in</a>
+                </li>
+                {% endif %}
 {#                <li class="nav-item">#}
 {#                    <form method="POST">#}
 {#                       {% csrf_token %}#}
