checkout with no design

--- a/shop/templates/shop/shopcart_products.html
+++ b/shop/templates/shop/shopcart_products.html
@@ -73,7 +73,7 @@
                 <div class="px-2">
                     <div class="row">
                         <div class="col-6">Total price: <b>{{ total | floatformat:2 }}€</b></div>
-                        <div class="col-6"><a href="/orderbike" class="btn btn-success btn-block mt-2">Checkout</a></div>
+                        <div class="col-6"><a href="/orderproduct" class="btn btn-success btn-block mt-2">Checkout</a></div>
                     </div>
                 </div>
             </div>
