update shopping cart to use cookies

--- a/shop/templates/shop/layout.html
+++ b/shop/templates/shop/layout.html
@@ -64,8 +64,8 @@
                     <a class="nav-link" href="/shopcart" >
                         <i class="fa fa-shopping-cart"></i>
                         {% load myapptags %}
-                        {% shopcartcount user.id as count %}
-                        <span class="qty">{{ count }}</span>
+                        {% shopcartcount  uuid as count %}
+                        <span class="qty">{{ count  }}</span>
                     </a>
 
                 </li>
